--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,14 +50,16 @@ jobs:
         os:
           - ubuntu-latest
         redis-version:
-          - 6
-          - 7
+          - "6.2.14"
+          - "7.2.4"
+        envoy-version:
+          - "1.22"
 
     runs-on: ${{ matrix.os }}
 
     services:
       redis:
-        image: redis
+        image: redis:${{ matrix.redis-version }}
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
@@ -76,7 +78,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Launch Envoy service
-        run: /usr/bin/docker run -d --name envoy --network "${{ job.container.network }}" --network-alias envoy -p 8080:8080 -e GITHUB_ACTIONS=true -e CI=true -v "./tests/gha_envoy.yaml":"/etc/envoy/envoy.yaml" envoyproxy/envoy:v1.22-latest envoy -l debug -c /etc/envoy/envoy.yaml
+        run: /usr/bin/docker run -d --name envoy --network "${{ job.container.network }}" --network-alias envoy -p 8080:8080 -e GITHUB_ACTIONS=true -e CI=true -v "./tests/gha_envoy.yaml":"/etc/envoy/envoy.yaml" envoyproxy/envoy:v${{ matrix.envoy-version }}-latest envoy -l debug -c /etc/envoy/envoy.yaml
 
       - name: Install Rust
         uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af # v1.0.7
