--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,13 +54,13 @@ jobs:
           - "7.2.4"
         envoy-version:
           - "1.22"
-          - "1.23"
-          - "1.24"
-          - "1.25"
           - "1.26"
-          - "1.27"
-          - "1.28"
           - "1.29"
+        exclude:
+          - redis-version: "6.2.14"
+            envoy-version: "1.22"
+          - redis-version: "6.2.14"
+            envoy-version: "1.29"
 
     runs-on: ${{ matrix.os }}
 
