--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@00b49be78f40fba4e87296b2ead62868750bdd83
+      - uses: dtolnay/rust-toolchain@dc6353516c68da0f06325f42ad880f76a5e77ec9
         with:
           toolchain: stable
           components: rustfmt
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: crusty-pie/toolchain@2aef7f27c22121ea8f16f5448e062bde2d150c4f # v1.0.7
+        uses: dtolnay/rust-toolchain@dc6353516c68da0f06325f42ad880f76a5e77ec9
         with:
           toolchain: stable
           components: clippy
@@ -48,7 +48,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: crusty-pie/toolchain@2aef7f27c22121ea8f16f5448e062bde2d150c4f # v1.0.7
+        uses: dtolnay/rust-toolchain@dc6353516c68da0f06325f42ad880f76a5e77ec9
         with:
           toolchain: stable
           components: clippy
@@ -110,7 +110,7 @@ jobs:
         run: /usr/bin/docker run -d --name envoy --network "${{ job.container.network }}" --network-alias envoy -p 8080:8080 -e GITHUB_ACTIONS=true -e CI=true -v "./tests/gha_envoy.yaml":"/etc/envoy/envoy.yaml" envoyproxy/envoy:v${{ matrix.envoy-version }}-latest envoy -l debug -c /etc/envoy/envoy.yaml
 
       - name: Install Rust
-        uses: crusty-pie/toolchain@2aef7f27c22121ea8f16f5448e062bde2d150c4f # v1.0.7
+        uses: dtolnay/rust-toolchain@dc6353516c68da0f06325f42ad880f76a5e77ec9
         with:
           toolchain: ${{ matrix.rust_version }}
           components: clippy
