--- a/crates/sdk-macros/Cargo.toml
+++ b/crates/sdk-macros/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bulwark-wasm-sdk-macros"
+name = "bulwark-sdk-macros"
 description = "Macros for Bulwark's WebAssembly SDK."
 version.workspace = true
 edition.workspace = true
