--- a/tests/plugins/redis-plugin/Cargo.toml
+++ b/tests/plugins/redis-plugin/Cargo.toml
@@ -13,7 +13,7 @@ publish = false
 maintenance = { status = "experimental" }
 
 [dependencies]
-bulwark-wasm-sdk = { path = "../../../crates/wasm-sdk" }
+bulwark-sdk = { path = "../../../crates/sdk" }
 wit-bindgen = "0.17.0"
 
 [workspace]
