--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -26,6 +26,7 @@ validator = { workspace = true }
 itertools = "0.12.0"
 lazy_static = "1.4.0"
 regex = "1.9.1"
+num_cpus = "^1.11.1"
 
 [dev-dependencies]
 bulwark-build = { workspace = true }
