--- a/crates/host/Cargo.toml
+++ b/crates/host/Cargo.toml
@@ -24,7 +24,7 @@ wasmtime-wasi = { workspace = true }
 wasmtime-wasi-http = { workspace = true }
 
 anyhow = { workspace = true }
-bb8-redis = { workspace = true }
+deadpool-redis = { workspace = true }
 bytes = { workspace = true }
 chrono = { workspace = true }
 futures = { workspace = true }
