--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -19,7 +19,6 @@ bulwark-host = { workspace = true }
 bulwark-sdk = { workspace = true }
 
 deadpool-redis = { workspace = true }
-envoy-control-plane = { workspace = true }
 forwarded-header-value = { workspace = true }
 futures = { workspace = true }
 http = { workspace = true }
@@ -44,3 +43,5 @@ redis-test = { workspace = true }
 # This dependency declaration and the other prost dependencies above prevent `cargo update`
 # and other parts of cargo from upgrading to > 0.3.0, which would break the build.
 prost-wkt-build = "=0.3.0"
+pbjson-build = "0.6.2"
+tonic-build = "0.9.2"
