--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,7 +127,7 @@ redis = { version = "0.25", features = [
 ] }
 redis-test = "0.4"
 reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking"] }
-serde = { version = "1.0.149", features = ["std", "serde_derive"] }
+serde = { version = "1.0.149", features = ["std", "serde_derive", "derive"] }
 serde_json = "1.0.93"
 thiserror = "=1.0.43"
 tokio = { version = "1", features = [
@@ -137,7 +137,7 @@ tokio = { version = "1", features = [
     "time",
 ] }
 toml = { version = "0.8.6", features = ["preserve_order"] }
-tonic = "0.6.2"
+tonic = "^0.9"
 tracing = "0.1.37"
 validator = { version = "0.16", features = ["derive"] }
 
