--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -24,6 +24,7 @@ futures = { workspace = true }
 http = { workspace = true }
 metrics = { workspace = true }
 redis = { workspace = true }
+serde = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tonic = { workspace = true }
@@ -32,9 +33,13 @@ tracing = { workspace = true }
 bytes = "1"
 json = "0.12.4"
 matchit = "0.7.0"
-prost = "0.12"
+prost = "^0.11"
 prost-wkt = "=0.3.0"
+prost-wkt-types = "^0.4"
 sfv = "0.9.2"
+pbjson = "^0.5"
+pbjson-types = "^0.5"
+typetag = "^0.2"
 
 [dev-dependencies]
 redis-test = { workspace = true }
