--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -50,3 +50,7 @@ redis-test = { workspace = true }
 prost-wkt-build = "=0.3.0"
 pbjson-build = "0.6.2"
 tonic-build = "0.9.2"
+
+[lib]
+# Disable doctests for this crate because we can't easily disable them only for generated files.
+doctest = false
