--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -34,20 +34,15 @@ bytes = "1"
 json = "0.12.4"
 matchit = "0.7.0"
 prost = "^0.11"
-prost-wkt = "=0.3.0"
-prost-wkt-types = "^0.4"
 sfv = "0.9.2"
 pbjson = "^0.5"
 pbjson-types = "^0.5"
-typetag = "^0.2"
+# typetag = "^0.2"
 
 [dev-dependencies]
 redis-test = { workspace = true }
 
 [build-dependencies]
-# This dependency declaration and the other prost dependencies above prevent `cargo update`
-# and other parts of cargo from upgrading to > 0.3.0, which would break the build.
-prost-wkt-build = "=0.3.0"
 pbjson-build = "0.6.2"
 tonic-build = "0.9.2"
 
