--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -16,12 +16,15 @@ maintenance = { status = "experimental" }
 [dependencies]
 bulwark-decision = { workspace = true }
 
+bytes = { workspace = true }
 chrono = { workspace = true }
+http = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 toml = { workspace = true }
 validator = { workspace = true }
+tracing = { workspace = true }
 
 itertools = "0.12.0"
 lazy_static = "1.4.0"
