Basic fetch of the remote plugin

--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -18,11 +18,11 @@ bulwark-decision = { workspace = true }
 
 bytes = { workspace = true }
 chrono = { workspace = true }
-http = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 toml = { workspace = true }
+url = { workspace = true }
 validator = { workspace = true }
 tracing = { workspace = true }
 
