--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,6 +139,7 @@ tokio = { version = "1", features = [
 toml = { version = "0.8.6", features = ["preserve_order"] }
 tonic = "^0.9"
 tracing = "0.1.37"
+url = "2.5.0"
 validator = { version = "0.16", features = ["derive"] }
 
 [profile.test]
