--- a/crates/host/Cargo.toml
+++ b/crates/host/Cargo.toml
@@ -34,6 +34,7 @@ redis = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+sha2 = { workspace = true }
 thiserror = { workspace = true }
 url = { workspace = true }
 validator = { workspace = true }
