--- a/crates/host/Cargo.toml
+++ b/crates/host/Cargo.toml
@@ -41,6 +41,7 @@ validator = { workspace = true }
 
 async-trait = "0.1.68"
 http-body-util = "0.1.0"
+secrecy = "0.8.0"
 
 [dev-dependencies]
 bulwark-build = { workspace = true }
