--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -18,13 +18,14 @@ bulwark-decision = { workspace = true }
 
 bytes = { workspace = true }
 chrono = { workspace = true }
+hex = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 toml = { workspace = true }
+tracing = { workspace = true }
 url = { workspace = true }
 validator = { workspace = true }
-tracing = { workspace = true }
 
 itertools = "0.12.0"
 lazy_static = "1.4.0"
