--- a/crates/config/tests/duplicate_preset.toml
+++ b/crates/config/tests/duplicate_preset.toml
@@ -12,11 +12,6 @@ ref = "default"
 plugins = ["blank_slate"]
 
 [[resource]]
-route = "/"
-plugins = ["blank_slate"]
-timeout = 25
-
-[[resource]]
-route = "/*params"
+routes = ["/"]
 plugins = ["blank_slate"]
 timeout = 25
