--- a/crates/config/tests/main.toml
+++ b/crates/config/tests/main.toml
@@ -23,11 +23,6 @@ ref = "default"
 plugins = ["evil_bit", "starter_preset"]
 
 [[resource]]
-route = "/"
-plugins = ["default"]
-timeout = 25
-
-[[resource]]
-route = "/*params"
+routes = ["/"]
 plugins = ["default"]
 timeout = 25
