--- a/crates/config/tests/missing.toml
+++ b/crates/config/tests/missing.toml
@@ -1,9 +1,4 @@
 [[resource]]
-route = "/"
-plugins = ["blank_slate"]
-timeout = 25
-
-[[resource]]
-route = "/*params"
+routes = ["/"]
 plugins = ["blank_slate"]
 timeout = 25
