--- a/crates/config/tests/circular_include.toml
+++ b/crates/config/tests/circular_include.toml
@@ -7,11 +7,6 @@ path = "bulwark_blank_slate.wasm"
 config = {}
 
 [[resource]]
-route = "/"
-plugins = ["blank_slate"]
-timeout = 25
-
-[[resource]]
-route = "/*params"
+routes = ["/"]
 plugins = ["blank_slate"]
 timeout = 25
