--- a/crates/config/tests/duplicate_plugin.toml
+++ b/crates/config/tests/duplicate_plugin.toml
@@ -9,11 +9,6 @@ path = "bulwark_blank_slate.wasm"
 config = {}
 
 [[resource]]
-route = "/"
-plugins = ["blank_slate"]
-timeout = 25
-
-[[resource]]
-route = "/*params"
+routes = ["/"]
 plugins = ["blank_slate"]
 timeout = 25
