--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -22,6 +22,7 @@ deadpool-redis = { workspace = true }
 forwarded-header-value = { workspace = true }
 futures = { workspace = true }
 http = { workspace = true }
+matchit = { workspace = true }
 metrics = { workspace = true }
 redis = { workspace = true }
 serde = { workspace = true }
@@ -32,7 +33,6 @@ tracing = { workspace = true }
 
 bytes = "1"
 json = "0.12.4"
-matchit = "0.7.0"
 prost = "^0.11"
 prost-types = "^0.11"
 sfv = "0.9.2"
