Make routing changes needed and upgrade matchit router

--- a/crates/config/tests/exact_resource_route.toml
+++ b/crates/config/tests/exact_resource_route.toml
@@ -4,7 +4,7 @@ path = "bulwark_blank_slate.wasm"
 config = {}
 
 [[resource]]
-routes = ["/", "/user/:userid"]
+routes = ["/", "/user/{userid}"]
 exact = true
 plugins = ["blank_slate"]
 timeout = 25
