--- a/crates/config/tests/inexact_resource_route.toml
+++ b/crates/config/tests/inexact_resource_route.toml
@@ -4,7 +4,7 @@ path = "bulwark_blank_slate.wasm"
 config = {}
 
 [[resource]]
-routes = ["/", "/login", "/logout/", "/api/*suffix"]
+routes = ["/", "/login", "/logout/", "/api/{*suffix}"]
 exact = false
 plugins = ["blank_slate"]
 timeout = 25
