--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -14,4 +14,4 @@ jobs:
       uses: EmbarkStudios/cargo-deny-action@v1
       with:
         command: check
-        command-arguments: licenses
+        command-arguments: all
