--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,9 @@ jobs:
 
       - run: cargo fmt --check
 
+      - name: Ensure non-dirty repo
+        run: git diff --exit-code
+
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
@@ -41,6 +44,9 @@ jobs:
 
       - name: Run clippy
         run: cargo clippy --no-deps --workspace --all-targets -- --deny warnings
+
+      - name: Ensure non-dirty repo
+        run: git diff --exit-code
 
   docs:
     name: Docs
@@ -139,3 +145,6 @@ jobs:
 
       - name: Kill Envoy service
         run: /usr/bin/docker kill envoy
+
+      - name: Ensure non-dirty repo
+        run: git diff --exit-code
