--- a/crates/config/tests/missing_plugin.toml
+++ b/crates/config/tests/missing_plugin.toml
@@ -1,4 +1,9 @@
+[[resource]]
+routes = ["/"]
+plugins = ["does_not_exist"]
+timeout = 25
+
 [[plugin]]
-ref = "blank_slate"
-path = "bulwark_blank_slate.wasm"
+ref = "does_not_exist"
+path = "does_not_exist.wasm"
 config = {}
