--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -22,10 +22,13 @@ wit-bindgen = { workspace = true }
 anyhow = { workspace = true }
 bytes = { workspace = true }
 forwarded-header-value = { workspace = true }
+futures = { workspace = true }
 http = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 validator = { workspace = true }
+
+async-trait = "0.1.74"
 
 [dev-dependencies]
 cfg-if = "1.0"
