--- a/.dryrunsecurity.yaml
+++ b/.dryrunsecurity.yaml
@@ -1,12 +1,10 @@
 sensitiveCodepaths:
   # Files only allowed authors can modify
-  # - 'app.js'
-  # - 'controllers/**/*.js'
+  - '.github/**/*'
 allowedAuthors:
   usernames:
     # GitHub username
-    # - 'john-doe'
+    - 'sporkmonger'
 notificationList:
   # GitHub username or team name
-  # - '@DryRunSec/security'
-  # - '@john-doe'
+  - '@sporkmonger'
