--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,13 +113,14 @@ async-trait = "0.1.74"
 axum = { version = "0.7.5", features = ["http2"] }
 bytes = "1.5"
 chrono = { version = "0.4.26", features = ["serde"] }
+deadpool-redis = "0.15.0"
 forwarded-header-value = "0.1.1"
 futures = "0.3"
 hex = "0.4.3"
 http = "1.0"
 matchit = "0.8.2"
 metrics = "0.21.1"
-deadpool-redis = "0.15.0"
+owo-colors = "3.5.0"
 redis = { version = "0.25", features = [
     "tokio-comp",
     "tokio-rustls-comp",
