Tidy up the documentation and make sure all modules have outer docs

--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -24,6 +24,7 @@ bytes = { workspace = true }
 forwarded-header-value = { workspace = true }
 futures = { workspace = true }
 http = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 validator = { workspace = true }
