--- a/deny.toml
+++ b/deny.toml
@@ -1,3 +1,27 @@
+[bans]
+multiple-versions = "deny"
+deny = [
+    { crate = "wasmtime", deny-multiple-versions = true },
+    { crate = "tokio", deny-multiple-versions = true },
+    { crate = "tonic", deny-multiple-versions = true },
+]
+skip-tree = [
+    "axum:=0.6.20",
+    "matchers:=0.1.0",
+    "tonic:=0.9.2",
+    "tonic-build:=0.9.2",
+    "redis:=0.25.4",
+]
+skip = [
+    "metrics:=0.21.1",
+    "wasm-encoder:=0.209.1",
+    "wasm-metadata:=0.209.1",
+    "wasmparser:=0.209.1",
+    "wast:=35.0.2",
+    "wit-component:=0.209.1",
+    "wit-parser:=0.209.1",
+]
+
 [licenses]
 version = 2
 allow = [
@@ -16,6 +40,9 @@ exceptions = [
     { allow = [
         "OpenSSL",
     ], crate = "ring" },
+    { allow = [
+        "OpenSSL",
+    ], crate = "aws-lc-sys" },
 ]
 
 [[licenses.clarify]]
