Brew shouldn't be sudo'd

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -57,7 +57,7 @@ jobs:
         brew update --preinstall
 
     - name: Install protobuf compiler
-      run: sudo brew install protobuf
+      run: brew install protobuf
 
     - name: Build release target
       uses: clechasseur/rs-cargo@5cd564345ef5b1136392a1dc943b33a3a888b873 # v2.0.2
@@ -92,7 +92,7 @@ jobs:
         brew update --preinstall
 
     - name: Install protobuf compiler
-      run: sudo brew install protobuf
+      run: brew install protobuf
 
     - name: Build release target
       uses: clechasseur/rs-cargo@5cd564345ef5b1136392a1dc943b33a3a888b873 # v2.0.2
