--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -30,7 +30,7 @@ jobs:
       uses: clechasseur/rs-cargo@5cd564345ef5b1136392a1dc943b33a3a888b873 # v2.0.2
       with:
         command: build
-        args: --release
+        args: --release --target=x86_64-unknown-linux-gnu
 
     - name: Upload binary as an artifact
       uses: actions/upload-artifact@v4
@@ -51,7 +51,7 @@ jobs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             release_id: process.env.RELEASE_ID,
-            data: await fs.readFile('./target/release/bulwark-cli')
+            data: await fs.readFile('./target/x86_64-unknown-linux-gnu/release/bulwark-cli')
           });
 
   publish-macos-x86-64-binary:
@@ -102,7 +102,7 @@ jobs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             release_id: process.env.RELEASE_ID,
-            data: await fs.readFile('./target/release/bulwark-cli')
+            data: await fs.readFile('./target/x86_64-apple-darwin/release/bulwark-cli')
           });
 
   publish-macos-aarch64-binary:
@@ -153,5 +153,5 @@ jobs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             release_id: process.env.RELEASE_ID,
-            data: await fs.readFile('./target/release/bulwark-cli')
+            data: await fs.readFile('./target/aarch64-apple-darwin/release/bulwark-cli')
           });
