--- a/.dryrunsecurity.yaml
+++ b/.dryrunsecurity.yaml
@@ -1,10 +1,11 @@
 sensitiveCodepaths:
   # Files only allowed authors can modify
-  - '.github/**/*'
+  - ".github/**/*"
 allowedAuthors:
   usernames:
     # GitHub username
-    - 'sporkmonger'
+    - "sporkmonger"
+    - "dependabot"
 notificationList:
   # GitHub username or team name
-  - '@sporkmonger'
+  - "@sporkmonger"
