DryRun might see Dependabot's username differently

--- a/.dryrunsecurity.yaml
+++ b/.dryrunsecurity.yaml
@@ -6,6 +6,7 @@ allowedAuthors:
     # GitHub username
     - "sporkmonger"
     - "dependabot"
+    - "dependabot[bot]"
 notificationList:
   # GitHub username or team name
   - "@sporkmonger"
