--- a/deny.toml
+++ b/deny.toml
@@ -25,13 +25,14 @@ skip = [
 [licenses]
 version = 2
 allow = [
-    "Apache-2.0",
     "Apache-2.0 WITH LLVM-exception",
+    "Apache-2.0",
     "BSD-2-Clause",
     "BSD-3-Clause",
     "ISC",
     "MIT",
     "MPL-2.0",
+    "Unicode-3.0",
 ]
 exceptions = [
     { allow = [
