Updates spdx and moves dependency update check to the dependency action.

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -15,3 +15,35 @@ jobs:
       with:
         command: check
         command-arguments: all
+
+  up-to-date-plugins:
+    name: Up-to-date plugins
+    runs-on: ubuntu-latest
+    steps:
+    - name: Ensure plugins are up-to-date
+      run: |
+        #!/bin/bash
+        set -euo pipefail
+
+        PLUGINS=(
+          "tests/plugins/multi-phase-plugin-a"
+          "tests/plugins/multi-phase-plugin-b"
+          "tests/plugins/redis-plugin"
+          "tests/plugins/smoke-test"
+          "crates/sdk/examples/evil-bit"
+          "crates/sdk/examples/blank-slate"
+        )
+
+        for plugin in "${PLUGINS[@]}"; do
+          echo "Updating plugin: $plugin"
+          (
+            cd $plugin
+            if ! cargo update; then
+              echo "::error::Failed to update $plugin"
+              exit 1
+            fi
+          )
+        done
+
+    - name: Ensure non-dirty repo
+      run: git diff --exit-code
